syntax = "proto3";
package kernelport.v1;

message Tensor {
  // Minimal v0 tensor format (CPU bytes only)
  string name = 1;
  DType dtype = 2;
  repeated int64 shape = 3;
  bytes data = 4;
}

enum DType {
  DTYPE_UNSPECIFIED = 0;
  F32 = 1;
  F16 = 2;
  I64 = 3;
  I32 = 4;
  U8 = 5;
}

message InferRequest {
  string model = 1;
  repeated Tensor inputs = 2;
}

message InferResponse {
  repeated Tensor outputs = 1;
  uint64 queued_us = 2;
  uint64 batched_us = 3;
  uint64 backend_us = 4;
}

service InferenceService {
  rpc Infer(InferRequest) returns (InferResponse);
}
